log
Sat 27 Apr 2024 06:59:28 PM UTC: 
 tests:  0|6
total_score: 0/70
3d0c716
Sat 27 Apr 2024 07:01:39 PM UTC: 
 hashmap.c | 112 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 105 insertions(+), 7 deletions(-)
 tests:  0|0
e2d0dd5
Sat 27 Apr 2024 07:04:56 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
bc19095
Sat 27 Apr 2024 07:07:07 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
b85c97e
Sat 27 Apr 2024 07:09:19 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
900c426
Sat 27 Apr 2024 07:17:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
545c50c
Sat 27 Apr 2024 07:19:15 PM UTC: 
 hashmap.c | 26 ++++++--------------------
 1 file changed, 6 insertions(+), 20 deletions(-)
 tests:  0|0
5b04ffd
Sat 27 Apr 2024 07:22:00 PM UTC: 
 hashmap.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
 tests:  0|0
e45dca7
Sat 27 Apr 2024 07:23:56 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:72:21: error: initialization of ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   72 |   Pair **hash_map = (Pair *)malloc(sizeof(Pair) * nueva_capacidad);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
271683e
Sat 27 Apr 2024 07:24:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:72:22: error: initialization of ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   72 |   Pair ** hash_map = (Pair *)malloc(sizeof(Pair*) * nueva_capacidad);
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
80b2a87
Sat 27 Apr 2024 07:24:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
4faadb8
Sat 27 Apr 2024 07:36:38 PM UTC: 
 hashmap.c | 34 +++++++++++++++++++---------------
 1 file changed, 19 insertions(+), 15 deletions(-)
 tests:  7|4
total_score: 30/70
199dc97
